[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/User Interface/Art/Kenney Future_Small.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=2]
[ext_resource path="res://Scenes/MainScenes/UserInterface.gd" type="Script" id=3]
[ext_resource path="res://assets/Tower sprites/towerDefense_tile228.png" type="Texture" id=5]
[ext_resource path="res://assets/Tower sprites/towerDefense_tile180.png" type="Texture" id=6]
[ext_resource path="res://assets/Tower sprites/towerDefense_tile249.png" type="Texture" id=7]
[ext_resource path="res://assets/Tower sprites/towerDefense_tile250.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Maps/Map1.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 0.313726 )
font_data = ExtResource( 1 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Map1" parent="." instance=ExtResource( 9 )]
position = Vector2( 12, -1 )

[node name="UserInterface" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="HUD" type="Control" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MenuBar" type="ColorRect" parent="UserInterface/HUD"]
self_modulate = Color( 0, 0, 0, 0.411765 )
margin_left = 905.0
margin_top = 314.0
margin_right = 1025.0
margin_bottom = 597.0
rect_min_size = Vector2( 0, 60 )

[node name="BuildBar" type="VBoxContainer" parent="UserInterface/HUD/MenuBar"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -283.0
margin_right = 100.0
margin_bottom = -31.0
rect_min_size = Vector2( 100, 140 )

[node name="Gun+missile" type="VBoxContainer" parent="UserInterface/HUD/MenuBar/BuildBar"]
margin_right = 100.0
margin_bottom = 248.0

[node name="Gun" type="TextureButton" parent="UserInterface/HUD/MenuBar/BuildBar/Gun+missile" groups=["build_buttons"]]
margin_left = 10.0
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Base" type="TextureRect" parent="UserInterface/HUD/MenuBar/BuildBar/Gun+missile/Gun"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="Turret" type="TextureRect" parent="UserInterface/HUD/MenuBar/BuildBar/Gun+missile/Gun"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_right = 13.0
texture = ExtResource( 7 )
expand = true

[node name="Missle" type="TextureButton" parent="UserInterface/HUD/MenuBar/BuildBar/Gun+missile" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 84.0
margin_right = 90.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Base" type="TextureRect" parent="UserInterface/HUD/MenuBar/BuildBar/Gun+missile/Missle"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="Missle" type="TextureRect" parent="UserInterface/HUD/MenuBar/BuildBar/Gun+missile/Missle"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_right = 13.0
texture = ExtResource( 8 )
expand = true

[node name="Dog" type="TextureButton" parent="UserInterface/HUD/MenuBar/BuildBar/Gun+missile" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 168.0
margin_right = 90.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Base" type="TextureRect" parent="UserInterface/HUD/MenuBar/BuildBar/Gun+missile/Dog"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="Missle" type="TextureRect" parent="UserInterface/HUD/MenuBar/BuildBar/Gun+missile/Dog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_right = 13.0
texture = ExtResource( 8 )
expand = true

[node name="HBoxContainer2" type="HBoxContainer" parent="UserInterface/HUD/MenuBar/BuildBar"]
margin_top = 252.0
margin_right = 100.0
margin_bottom = 252.0

[node name="InfoMenu" type="ColorRect" parent="UserInterface/HUD"]
self_modulate = Color( 0, 0, 0, 0.411765 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1023.0
margin_bottom = 38.0

[node name="Health_counter" type="Label" parent="UserInterface/HUD/InfoMenu"]
margin_left = 12.0
margin_right = 230.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Health: "
valign = 1
uppercase = true

[node name="Money_counter" type="Label" parent="UserInterface/HUD/InfoMenu"]
margin_left = 243.0
margin_top = 7.0
margin_right = 475.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Money: "
valign = 1
uppercase = true
